Fix JavaDoc generation